--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-iced = "0.13.1"
-iced_aw = {version = "0.12.2", features = ["spinner"]}
+iced = {version = "0.13.1", features = ["image"]}
+iced_aw = {version = "0.12.2", features = ["spinner", "badge"]}
 rust-fuzzy-search = "0.1.1"
