--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.40"
+chronos = "0.0.0"
 iced = {version = "0.13.1", features = ["image"]}
 iced_aw = {version = "0.12.2", features = ["spinner", "badge", "selection_list"]}
 rust-fuzzy-search = "0.1.1"
